<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    tools:context=".presenter.auth.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editEmailLogin"
            style="@style/EditTextCustom"
            android:drawableStart="@drawable/ic_email_edit_24"
            android:ems="10"
            android:hint="@string/email_hint_title"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/editPasswordLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editPasswordLogin"
            style="@style/EditTextCustom"
            android:drawableStart="@drawable/ic_lock_edit_24"
            android:ems="10"
            android:hint="@string/password_hint_title"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmailLogin" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/purple_900"
            android:text="@string/btn_title_login"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordLogin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            tools:layout_editor_absoluteX="24dp">

            <TextView
                android:id="@+id/btnTextRecover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:textColor="@color/purple_900"
                android:text="@string/forgot_password_title"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="295dp" />

            <TextView
                android:id="@+id/btnTextNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account_title"
                android:textColor="@color/purple_900"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="316dp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>