<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".presenter.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="@color/purple_900">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Perfil"
                android:textAlignment="center"
                android:textColor="@color/purple_900" />

        </com.google.android.material.appbar.MaterialToolbar>


        <io.woong.shapedimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar_default"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ProgressBar
            android:id="@+id/pbImageProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/purple_900"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.641" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfile"
            app:layout_constraintVertical_bias="0.162">

            <EditText
                android:id="@+id/editNameProfile"
                style="@style/EditTextCustom"
                android:drawableStart="@drawable/ic_person_24"
                android:ems="10"
                android:hint="@string/name_hint_title"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/editPhoneProfile"
                style="@style/EditTextCustom"
                android:drawableStart="@drawable/ic_smartphone_24"
                android:ems="10"
                android:hint="@string/phone_hint_title"
                android:inputType="phone"
                app:mask="(##) #####-####" />

            <EditText
                android:id="@+id/editEmailProfile"
                style="@style/EditTextCustom"
                android:drawableStart="@drawable/ic_email_edit_24"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/email_hint_title"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />


            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/purple_900"
                android:text="@string/btn_update_profile_title"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>